--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,8 @@ pip-wheel-metadata/
 share/python-wheels/
 *.egg-info/
 data/
+processed/
+models/
 stockfish_14_win_x64_avx2/
 .installed.cfg
 *.egg
